test(bacnet): added possibility to ignore malformed packages